Note that this isn't consensus yet.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     // All config options at https://respec.org/docs/
     var respecConfig = {
       specStatus: 'draft-finding',
+      isPreview: true,
       format: 'markdown',
       editors: [{
         name: 'Robin Berjon',
@@ -20,7 +21,6 @@
         companyURL: 'https://google.com/',
       }],
       github: 'w3ctag/privacy-principles',
-      edDraftURI: 'https://w3ctag.github.io/privacy-principles/',
       shortName: 'privacy-principles',
       localBiblio: {
         'ANTI-TRACKING-POLICY': {
@@ -235,10 +235,9 @@ This document is a draft Finding by a Task Force jointly convened by the
 Technical Architecture Group (TAG) and the Privacy Interest Group (PING). It
 does not contain any normative content.
 
-This document reflects the consensus of the Task Force at the time of
-publication. It will continue to evolve and the Task Force will issue updates as
-often as needed. At the conclusion of the Task Force, it is intended to be
-adopted by the TAG.
+This document <strong>DOES NOT YET</strong> reflect the consensus of the Task Force. It will
+continue to evolve and the Task Force will issue updates as often as needed. At
+the conclusion of the Task Force, it is intended to be adopted by the TAG.
 
 </section>
 
