--- a/index.html
+++ b/index.html
@@ -781,5 +781,230 @@ companies paying for access with strong checks and balances, and privacy guarant
 the funds would be used to support enhanced security for all.
 -->
 
+# From the Privacy Threat Model
+
+[[HTML]] defines an [=origin=] as the tuple of a scheme, hostname, and port that
+provides the main security boundary on the web.
+
+A <dfn>site</dfn> is a set of [=origins=] that are all [=same site=] with each
+other. Note that there are problems ([[PSL-PROBLEMS]]) with using [=registrable
+domains=] as a logical boundary.
+
+A <dfn>party</dfn> is defined by [[tracking-dnt]] as "a natural person, a legal
+entity, or a set of legal entities that share common owner(s), common
+controller(s), and a group identity that is easily discoverable by a user."
+
+The <dfn>first party</dfn> for a user action is the [=party=] that controls the
+[=origin=] of the [=top-level browsing context=] under which the action
+happened. Intuitively, this is the owner of the domain in the browser's URL bar.
+This differs from <a
+href="https://wiki.mozilla.org/Security/Anti_tracking_policy#Tracking_Definition">Mozilla's
+definition</a> in that Mozilla defines other parties as first parties if the
+user can easily discover which party it is and intends to interact with that
+party, for example to allow sign-in widgets to be first-party.
+
+A <dfn>third party</dfn> for a user action is any party that isn't the [=first
+party=] or the user (the second party).
+
+A <dfn>user</dfn> is a human or program that controls a user agent.
+
+A <dfn>user ID</dfn> is a pair of a [=site=] and a (potentially-large) integer
+allocated by that site that is used to identify a [=user=] on that site. A
+single user will generally have many user IDs that refer to them, and a single
+site may or may not know that multiple user IDs refer to the same user.
+
+A <dfn>global identifier</dfn> is a string that identifies a particular [=user=]
+independent of which site they're visiting. Users generally have relatively few
+global identifiers and can usually list and recognize them. A goal of
+anti-tracking policy is to prevent [=user IDs=] from becoming [=global
+identifiers=].
+
+An <dfn>attacker</dfn> is any entity trying to get information that a [=user=]
+might not want them to get. Attackers are often entities that a user intends to
+interact with in other ways, as both [=first party|first=] and [=third parties=], and some users may
+not mind their collection of this information.
+
+This document uses the terms <dfn>publisher</dfn> and <dfn>tracker</dfn>
+colloquially to refer to particular kinds of [=sites=] and the [=parties=] that
+operate them. They are not rigorously defined.
+
+# High-level threats # {#high-level-threats}
+
+User agents should attempt to defend their users from a variety of high-level
+threats or attacker goals, described in this section. [[#goals]] then describes
+the low-level steps an attacker would use to achieve these high-level goals.
+
+[[RFC6973]] describes the following high-level privacy threats, which the TAG
+has adopted into [[security-privacy-questionnaire#threats]]:
+
+: <dfn>Surveillance</dfn>
+
+:: Surveillance is the observation or monitoring of an individual’s
+    communications or activities. See [[RFC6973#section-5.1.1]].
+
+: <dfn noexport>Stored Data Compromise</dfn>
+
+:: End systems that do not take adequate measures to secure stored data from
+    unauthorized or inappropriate access. See [[RFC6973#section-5.1.2]].
+
+: <dfn>Intrusion</dfn>
+
+:: Intrusion consists of invasive acts that disturb or interrupt one’s life or
+    activities. See [[RFC6973#section-5.1.3]].
+
+: <dfn>Misattribution</dfn>
+
+:: Misattribution occurs when data or communications related to one individual
+    are attributed to another. See [[RFC6973#section-5.1.4]].
+
+: <dfn>Correlation</dfn>
+
+:: Correlation is the combination of various pieces of information related to an
+    individual or that obtain that characteristic when combined. See
+    [[RFC6973#section-5.2.1]].
+
+: <dfn>Identification</dfn>
+
+:: Identification is the linking of information to a particular individual to
+    infer an individual’s identity or to allow the inference of an individual’s
+    identity. See [[RFC6973#section-5.2.2]].
+
+: <dfn>Secondary Use</dfn>
+
+:: Secondary use is the use of collected information about an individual without
+    the individual’s consent for a purpose different from that for which the
+    information was collected. See [[RFC6973#section-5.2.3]].
+
+: <dfn>Disclosure</dfn>
+
+:: Disclosure is the revelation of information about an individual that affects
+    the way others judge the individual. See [[RFC6973#section-5.2.4]].
+
+: <dfn noexport>Exclusion</dfn>
+
+:: Exclusion is the failure to allow individuals to know about the data that
+    others have about them and to participate in its handling and use. See
+    [[RFC6973#section-5.2.5]].
+
+These threats combine into the particular concrete threats we want web
+specifications to defend against, described in subsections here:
+
+## Unwanted same-site recognition ## {#hl-recognition-same-site}
+
+Contributes to [=surveillance=], [=correlation=], and [=identification=].
+
+Users of most instantiations of the web platform expect that if they visit a
+site on one day, and then visit again the next day, the site will be able to
+recognize that they're the same user. This allows sites to save the user's
+preferences, shopping carts, etc. The web platform offers many mechanisms that
+are either intended to accomplish this recognition or that can be trivially used
+for it, including [[RFC6265|cookies]], {{WindowLocalStorage/localStorage}},
+{{WindowOrWorkerGlobalScope/indexedDB}}, {{CacheStorage}}, and other forms of
+storage.
+
+A privacy harm only occurs if the user wants to break the association between
+two visits, but the site can still determine with high probability that the two
+visits came from the same user.
+
+A user might expect that their two visits won't be associated if they:
+
+* Use a browser that promises to avoid such correlation.
+* Use their browser's private browsing mode. ([[WHAT-DOES-PRIVATE-BROWSING-DO]])
+* Use two different browser profiles between the two visits.
+* Explicitly clear the site's cookies or storage.
+
+This recognition is generally accomplished by either "supercookies" or [=browser
+fingerprinting=].
+
+Supercookies occur when a browser stores data for a site but makes that data
+more difficult to clear than other cookies or storage.
+[[fingerprinting-guidance#clearing-all-local-state]] discusses how
+specifications can help browsers avoid this mistake.
+
+Fingerprinting consists of using attributes of the user's browser and platform
+that are consistent between the two visits and probabilistically unique to the
+user.
+
+The attributes can be exposed as information about the user's device that is
+otherwise benign (as opposed to [[#hl-sensitive-information]]). For example:
+
+* What are the user's language and time zone?
+* What size is the user's window?
+* What system preferences has the user set? Dark mode, serif font, etc...
+* ...
+
+See [[fingerprinting-guidance]] for how to mitigate this threat.
+
+## Unwanted cross-site recognition ## {#hl-recognition-cross-site}
+
+Contributes to [=surveillance=], [=correlation=], and [=identification=],
+usually more significantly than [[#hl-recognition-same-site]].
+
+This occurs if a site can determine with high probability that a visit to that
+site comes from the same user as another visit to a *different* site.  This
+threat is discussed in [[#model-cross-site-recognition]].
+
+## Sensitive information disclosure ## {#hl-sensitive-information}
+
+Contributes to [=correlation=], [=identification=], [=secondary use=], and
+[=disclosure=].
+
+Many pieces of information about a user could cause privacy harms if disclosed.
+For example:
+
+* The user's location.
+* Video or audio from the user's camera or microphone.
+* The content of certain files on the user's filesystem.
+* Financial data.
+* Contacts.
+* Calendar entries.
+* [Whether the user is using assistive technology.](https://w3ctag.github.io/design-principles/#do-not-expose-use-of-assistive-tech)
+* ...
+
+A particular piece of information may have different sensitivity for different
+users. Language preferences, for example, might typically seem innocent, but
+also can be an indicator of belonging to an ethnic minority. Precise location
+information can be extremely sensitive (because it's identifying, because it
+allows for in-person intrusions, because it can reveal detailed information
+about a person's life) but it might also be public and not sensitive at all, or
+it might be low-enough granularity that it is much less sensitive for many
+users.
+
+When considering whether a class of information is likely to be sensitive to
+users, consider at least these factors:
+
+* whether it serves as a persistent identifier (see severity in Mitigating
+    browser fingerprinting);
+* whether it discloses substantial (including intimate details or inferences)
+    information about the user or other users;
+* whether it can be revoked (as in determining whether a permission is
+    necessary);
+* whether it enables other threats, like intrusion.
+
+Issue(16): This description of what makes information sensitive still needs to
+be refined.
+
+## Intrusive behavior ## {#hl-intrusion}
+
+See [=intrusion=].
+
+Privacy harms don't always come from a site learning things. For example it is
+intrusive for a site to
+
+* Display messages or notifications,
+* Play sounds,
+* Occupy the full screen,
+* etc.
+
+if the user doesn't intend for it to do so.
+
+## Powerful capabilities ## {#hl-capabilities}
+
+Contributes to [=misattribution=].
+
+For example, a site that sends SMS without the user's intent could cause them to
+be blamed for things they didn't intend.
+
+
 </body>
 </html>
