Update the Status of this Document to be more in line with other W3C documents.

--- a/index.html
+++ b/index.html
@@ -241,13 +241,18 @@ it can apply to both.
 
 <section id="sotd">
 
-This document is a draft Finding by a Task Force jointly convened by the
-Technical Architecture Group (TAG) and the Privacy Interest Group (PING). It
-does not contain any normative content.
+This document was published as a Draft Finding by the [Web Privacy Principles Task
+Force](https://github.com/w3ctag/privacy-principles), which was convened by the [Technical
+Architecture Group (TAG)](https://www.w3.org/2001/tag/) and the [Privacy Interest Group
+(PING)](https://www.w3.org/Privacy/IG/). Publication as a Draft Finding does not imply endorsement
+by the W3C Membership. This draft <strong>does not yet</strong> reflect the consensus of the task
+force and may be updated, replaced, or obsoleted by other documents at any time. It is
+inappropriate to cite this document as anything other than a work in progress.
 
-This document <strong>DOES NOT YET</strong> reflect the consensus of the Task Force. It will
-continue to evolve and the Task Force will issue updates as often as needed. At
-the conclusion of the Task Force, it is intended to be adopted by the TAG.
+It does not contain any normative content.
+
+This document will continue to evolve and the task force will issue updates as often as needed. At
+the conclusion of the task force, it is intended to be adopted by the TAG as a Finding.
 
 </section>
 
