Remove noexport attributes left over from Bikeshed import.

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ Security and Privacy Self-Review Questionnaire</a>:
 communications or activities. See <a
 data-cite="RFC6973#section-5.1.1">RFC6973§5.1.1</a>.
 
-<dt><dfn noexport>Stored Data Compromise</dfn>
+<dt><dfn>Stored Data Compromise</dfn>
 
 <dd> End systems that do not take adequate measures to secure stored data from
     unauthorized or inappropriate access. See <a
@@ -852,7 +852,7 @@ data-cite="RFC6973#section-5.2.3">RFC6973§5.2.3</a>.
     the way others judge the individual. See <a
 data-cite="RFC6973#section-5.2.4">RFC6973§5.2.4</a>.
 
-<dt><dfn noexport>Exclusion</dfn>
+<dt><dfn>Exclusion</dfn>
 
 <dd>Exclusion is the failure to allow individuals to know about the data that
     others have about them and to participate in its handling and use. See
