No implied TAG endorsement.

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ This document was published as a Draft Finding by the [Web Privacy Principles Ta
 Force](https://github.com/w3ctag/privacy-principles), which was convened by the [Technical
 Architecture Group (TAG)](https://www.w3.org/2001/tag/) and the [Privacy Interest Group
 (PING)](https://www.w3.org/Privacy/IG/). Publication as a Draft Finding does not imply endorsement
-by the W3C Membership. This draft <strong>does not yet</strong> reflect the consensus of the task
-force and may be updated, replaced, or obsoleted by other documents at any time. It is
+by the TAG or by the W3C Membership. This draft <strong>does not yet</strong> reflect the consensus
+of the task force and may be updated, replaced, or obsoleted by other documents at any time. It is
 inappropriate to cite this document as anything other than a work in progress.
 
 It does not contain any normative content.
