rewrite the abstract to align with the style guide, as per issue #15

--- a/index.html
+++ b/index.html
@@ -227,15 +227,14 @@
 
 <section id="abstract">
 
-Privacy has been an essentially contested concept [[?PRIVACY-CONTESTED]]. Its debated meaning
-render its support problematic in the context of a standards-setting process grounded in
-consensus [[?W3C-PROCESS]], in seeking out technical solutions grounded on shared
-requirements, and in addressing the needs of a worldwide constituency. This document
-provides definitions for privacy and related concepts that are suitable for a global
-audience, that can provide building blocks for privacy threat modelling, and can guide the
-development of the Web as a trustworthy platform. In the spirit of building a much-needed
-bridge between technology and policy, this document is written under the expectation that
-it can apply to both.
+There has been a lot of debate about privacy in the Web community [[?PRIVACY-CONTESTED]].
+This debate can make it difficult to reach consensus [[?W3C-PROCESS]] on the right
+technical means to support privacy, especially in a manner that applies to the entire
+world and across many different local laws. This document provides definitions for privacy
+and related concepts that are applicable worldwide. It also provides a privacy threat model
+and can guide the development of the Web as a trustworthy platform. Users of the Web would
+benefit from a stronger relationship between technology and policy, and this document is
+written to work with both.
 
 </section>
 
