--- a/index.html
+++ b/index.html
@@ -283,15 +283,27 @@ shared understanding of privacy. Some of the definitions below build atop the wo
 
 ## People &amp; Data {#people-data}
 
-A <dfn>user</dfn> (also <dfn data-lt="individual">person</dfn> or <dfn>data subject</dfn>) is any natural
-person.
+A <dfn>user</dfn> (also <dfn data-lt="individual">person</dfn> or <dfn>data subject</dfn>)
+is any natural person.
 
-We define <dfn data-lt="data">personal data</dfn> as any information relating to a [=person=] such
-that:
+We define <dfn data-lt="data">personal data</dfn> as any information relating to a
+[=person=] such that:
 
-* this [=person=] is identified, directly or indirectly, by reference to an
-  identifier such as a name, email address, an arbitrary identifier or
-  identification number, an online identifier such as an IP address or any
+* The [=data=] can identify this [=person=] directly, for instance through their name,
+  email address, phone number, or other such traditional identifiers.
+* The [=data=] can identify this [=person=] through
+
+an arbitrary string or identification number, an online identifier such as an IP address or any
+identifier attached to a device this [=person=] may be using
+
+location data, or factors specific to the physical, physiological, genetic,
+mental, economic, cultural, or social identity of that [=person=]
+
+identifiers derived from such data, for instance through hashing
+
+
+* this [=person=] is identified, directly or indirectly, using an identifier (name, email
+  address, an arbitrary string or identification number, an online identifier such as an IP address or any
   identifier attached to a device this [=person=] may be using, phone number,
   location data, or factors specific to the physical, physiological, genetic,
   mental, economic, cultural, or social identity of that [=person=], as well as
