--- a/index.html
+++ b/index.html
@@ -227,14 +227,11 @@
 
 <section id="abstract">
 
-There has been a lot of debate about privacy in the Web community [[?PRIVACY-CONTESTED]].
-This debate can make it difficult to reach consensus [[?W3C-PROCESS]] on the right
-technical means to support privacy, especially in a manner that applies to the entire
-world and across many different local laws. This document provides definitions for privacy
-and related concepts that are applicable worldwide. It also provides a privacy threat model
-and can guide the development of the Web as a trustworthy platform. Users of the Web would
-benefit from a stronger relationship between technology and policy, and this document is
-written to work with both.
+Privacy is an essential part of the Web [[?ETHICAL-WEB]]. This document provides definitions
+for privacy and related concepts that are applicable worldwide. It also provides a privacy
+threat model and can guide the development of the Web as a trustworthy platform. Users of
+the Web would benefit from a stronger relationship between technology and policy, and this
+document is written to work with both.
 
 </section>
 
