Can we define party by accountability, not ownership?
It is possible for the same "company" that is ultimately owned by the same stockholders to be more than one party for purposes of being accountable for user data.

There are situations where the same company's web properties in different countries do have common ownership, but users in one jurisdiction are party to a EULA with one subsidiary and users in another jurisdiction have a EULA with a different entity.

From a user point of view the top level owner does not matter as much as whatever legal requirements the "party" is subject to for how their data is used.

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ intellectual or psychological impairment, or refugees.
 ## The Parties {#parties}
 
 A <dfn>party</dfn> is a [=person=], a legal entity, or a set of legal entities that
-share common owners, common controllers, and a group identity that is readily evident to
+share legal accountability for use of data, common controllers, and a group identity that is readily evident to
 the [=user=] without them needing to consult additional material, typically through
 common branding.
 
