--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 <section id="abstract">
 
 Privacy is an essential part of the Web [[?ETHICAL-WEB]]. This document provides definitions
-for privacy and related concepts that are applicable worldwide. It also provides a privacy
-threat model and can guide the development of the Web as a trustworthy platform. Users of
+for privacy and related concepts that are applicable worldwide. It also provides a set of privacy
+principles that should guide the development of the Web as a trustworthy platform. Users of
 the Web would benefit from a stronger relationship between technology and policy, and this
 document is written to work with both.
 
