--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ their agency and sovereignty.
 A [=person=]'s <dfn>identity</dfn> is the set of characteristics that define them. Their identity
 *in a [=context=]* is the set of characteristics they present to that context. People
 frequently present different identities to different contexts, and also frequently share an identity
-between several contexts.
+among several contexts.
 
 <dfn>Cross-context recognition</dfn> is the act of recognising that an [=identity=] in one
 [=context=] is the same [=person=] as an [=identity=] in another [=context=]. [=Cross-context
