Consistently use "browser profile" to distinguish from profiles of individuals.

--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@ default, [=user agents=] define a <dfn>machine-enforceable context</dfn> or <dfn
 * A set of [=environments=] (roughly iframes (including cross-site iframes), workers, and top-level
   pages)
 * whose [=environment/top-level origins=] are in the [=same site=] (but see [[PSL-PROBLEMS]])
-* being visited within the same user agent installation (and profile for user agents that support
-  multiple profiles)
+* being visited within the same user agent installation (and browser profile for user agents that
+  support multiple browser profiles)
 * between points in time that the user or their agent clears that [=site=]'s cookies and other
   storage (which is sometimes automatic at the end of each session).
 
