Remove "processing" from the profiling definition.

--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@ data-cite="RFC6973#section-5.2.1">RFC6973§5.2.1</a>.
 
 <dt><dfn>Profiling</dfn></dt>
 
-<dd>The processing of data to infer, evaluate or predict an individual's attributes, interests or
+<dd>The inference, evaluation, or prediction of an individual's attributes, interests, or
 behaviours.</dd>
 
 <dt><dfn>Identification</dfn>
