Make a "party" a single legal entity, not a set.
This diverges from the https://www.w3.org/TR/tracking-dnt/ definition, which
does allow sets of legal entities to be a single party. These principles are
instead moving toward an approach where multiple parties can be
considered first party as long as they meet conditions like the ones deleted in
this change, which should satisfy the reasons DNT allowed multiple entities to
group into a single party.

--- a/index.html
+++ b/index.html
@@ -346,10 +346,7 @@ intellectual or psychological impairment, or refugees.
 
 ## The Parties {#parties}
 
-A <dfn>party</dfn> is a [=person=], a legal entity, or a set of legal entities that
-share common owners, common controllers, and a group identity that is readily evident to
-the [=user=] without them needing to consult additional material, typically through
-common branding.
+A <dfn>party</dfn> is a [=person=] or a legal entity.
 
 The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which the [=user=] intends to
 interact. Merely hovering over, muting, pausing, or closing a given piece of content does
