People are also legal entities.

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ intellectual or psychological impairment, or refugees.
 
 ## The Parties {#parties}
 
-A <dfn>party</dfn> is a [=person=] or a legal entity.
+A <dfn>party</dfn> is a [=person=] or other legal entity.
 
 The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which the [=user=] intends to
 interact. Merely hovering over, muting, pausing, or closing a given piece of content does
