Fix a couple of Christine's comments.

--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@ that is fundamental to the Web.</span></p>
 
 * This principle uses "probably" because websites can do harm even if they can't be completely
   certain that visits come from the same person.
-* This principle uses "quickly" because it appears impossible to prevent some forms of
+* This principle uses "quickly" because it currently appears impossible to prevent some forms of
   fingerprinting that take a long time or many visits within each [=partition=].
 * This principle allows violations that only affect a small fraction of people who use the web
   because people need to be allowed to configure their systems in unique ways, for example by using
@@ -935,9 +935,9 @@ that is fundamental to the Web.</span></p>
 
 [=Partitions=] are separated in two ways that lead to distinct kinds of user-visible recognition.
 When their divisions between different sites are violated, that leads to <a
-href="#hl-recognition-cross-site"></a>. When a violation occurs at their divisions between different
-browser profiles or at the point a user clears their cookies and site storage, that leads to <a
-href="#hl-recognition-same-site"></a>.
+href="#hl-recognition-cross-site"></a>. When a violation occurs at their other divisions, for
+example between different browser profiles or at the point a user clears their cookies and site
+storage, that leads to <a href="#hl-recognition-same-site"></a>.
 
 ### Same-site recognition {#hl-recognition-same-site}
 
