Incorporate the Sept 8 discussion about "fundamental to the architecture of the web".

--- a/index.html
+++ b/index.html
@@ -915,8 +915,8 @@ users need to be able to control when websites do it as much as possible.
 should ensure that, if a [=person=] visits two or more web pages from different [=partitions=], that
 the pages cannot quickly determine that the visits probably came from the same person, for any
 significant or involuntary fraction of the people who use the web, unless the person explicitly
-expresses the same [=identity=] to the visits, or preventing this correlation would break a feature
-that is fundamental to the Web.</span></p>
+expresses the same [=identity=] to the visits, or preventing this correlation would break a
+technical feature that is fundamental to the Web.</span></p>
 
 </div>
 
