Define a party as whatever a person understands as a single thing.

--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@ intellectual or psychological impairment, or refugees.
 
 ## The Parties {#parties}
 
-A <dfn>party</dfn> is a [=person=], a legal entity, or a set of legal entities that
-share common owners, common controllers, and a group identity that is readily evident to
-the [=user=] without them needing to consult additional material, typically through
-common branding.
+A <dfn>party</dfn> is an entity that a [=person=] can reasonably understand as a single "thing"
+they're interacting with. Uses of this document in a particular domain are expected to describe how
+the core concepts of that domain combine into a [=user=]-comprehensible [=party=], and those refined
+definitions are likely to differ between domains.
 
 The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which the [=user=] intends to
 interact. Merely hovering over, muting, pausing, or closing a given piece of content does
