Some of Jeffrey's fixes for personal data
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@ A <dfn>user</dfn> (also <dfn data-lt="individual">person</dfn> or <dfn>data subj
 is any natural person.
 
 We define <dfn data-lt="data">personal data</dfn> as any information relating to a
-[=person=] such that:
+[=person=] such that any of:
 
-* The [=data=] references this [=person=] directly, for instance through their name,
+1. The [=data=] references this [=person=] directly, for instance through their name,
   email address, phone number, or other such traditional identifiers.
 * The [=data=] can identify this [=person=] through an arbitrary string or identification
   number, an online identifier such as an IP address or any identifier attached to a
