also update personal data

--- a/index.html
+++ b/index.html
@@ -306,25 +306,8 @@ We define <dfn data-lt="identifier">identifying data</dfn> as any information re
   manner has no way to identify that [=person=]. Put differently, an aggregate of [=people=]
   is identifying if the aggregate is actionable with respect to its members.
 
-We define <dfn data-lt="data">personal data</dfn> as any information relating to a
-[=person=] such that any of:
-
-1. The [=data=] references this [=person=] directly, for instance through their name,
-  email address, phone number, or other such traditional [=identifiers=].
-* The [=data=] can identify this [=person=] through an arbitrary string or identification
-  number, an online [=identifier=] such as an IP address or any [=identifier=] attached to a
-  device which this [=person=] may be using.
-* The [=data=] is about a [=person=]'s location (or of a device that a [=person=] would use).
-* The [=data=] contains factors specific to the physical, physiological, genetic, mental,
-  economic, cultural, or social identity of a [=person=].
-* The [=data=] is comprised of [=identifiers=] derived from other types of data in this list,
-  for instance through hashing.
-* The [=person=] could reasonably be reidentified from a conjunction of this
-  [=data=] with other data.
-* The [=data=] relates to a group of people such that a [=person=] may be treated in a
-  specific way for being part of the group, even if the entity treating them in this
-  manner has no way to identify that [=person=].
-
+We define <dfn data-lt="data">personal data</dfn> as any information that either is
+[=identifying data=] or is related to [=identifying data=].
 
 Data is <dfn>permanently de-identified</dfn> when there exists a high level of confidence
 that no [=person=] described by the data can be identified, directly or indirectly
