postProcessing because 'draft-finding' is not meant to be used like this, fix #16

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     var respecConfig = {
       specStatus: 'draft-finding',
       isPreview: true,
-      format: 'markdown',
+      postProcess: [(config, doc) => {
+        if (config.specStatus !== 'draft-finding') return;
+        let dt3 = doc.querySelector('.head dt:nth-of-type(3)');
+        while (dt3.previousElementSibling) dt3.parentNode.removeChild(dt3.previousElementSibling);
+      }],      format: 'markdown',
       editors: [{
         name: 'Robin Berjon',
         company: 'The New York Times',
