--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ document is written to work with both.
 
 This document is a Draft Finding of the [Technical Architecture Group (TAG)](https://www.w3.org/2001/tag/).
 It was prepared by the [Web Privacy Principles Task Force](https://github.com/w3ctag/privacy-principles),
-which was convened by the TAG, with participation from [Privacy Interest Group (PING)](https://www.w3.org/Privacy/IG/).
-Publication as a Draft Finding does not imply endorsement by the TAG or by the W3C Membership.
+which was convened by the TAG. Publication as a Draft Finding does not imply endorsement by the TAG
+or by the W3C Membership.
 
 This draft <strong>does not yet</strong> reflect the consensus of the TAG or the task force and may
 be updated, replaced, or obsoleted by other documents at any time. It is inappropriate to cite this
