sort out trust and refs

--- a/index.html
+++ b/index.html
@@ -258,15 +258,15 @@ the conclusion of the task force, it is intended to be adopted by the TAG as a F
 
 # Introduction {#intro}
 
-Privacy is essential to trust, and trust is an essential value of the Web [[?RFC8890]].
+Privacy is an essential value of the Web ([[?ETHICAL-WEB]], [[?design-principles]]).
 In everyday life, people typically find it easy to assess whether a given flow of
 information is a violation of privacy or not [[?NYT-PRIVACY]]. However, in the digital
 space, users struggle to understand how their data may be moved between contexts and how that
 may affect them. This is particularly true if they may be affected at a much later time and
 in completely different situations. Some actors are using this confusion to extract and
-exploit [=personal data=] at massive scales.
+exploit [=personal data=] at scale.
 
-The goal of this document is to define the terms that may prove useful in developing
+The goal of this document is to define principles that may prove useful in developing
 technology and policy that relate to privacy and [=personal data=]. It also provides:
 
 * A toolbox to support privacy threat modelling;
