no need for the list

--- a/index.html
+++ b/index.html
@@ -267,11 +267,7 @@ in completely different situations. Some actors are using this confusion to extr
 exploit [=personal data=] at scale.
 
 The goal of this document is to define principles that may prove useful in developing
-technology and policy that relate to privacy and [=personal data=]. It also provides:
-
-* A toolbox to support privacy threat modelling;
-* Ideas to inform debates over consent; and
-* An introduction to the set of issues in privacy that are of a collective, relational nature.
+technology and policy that relate to privacy and [=personal data=].
 
 [=Personal data=] is covered by regulations and this document recognises that existing data
 protection regimes take precedence for legal matters. However, because the Web is global, we
